# nimbu

./: .gitignore  README.md
nimbu/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
nimbu-ledc/: README.md  adcHandler.h  appl.h  definitions.h  nimbu-ledc.ino
nimbu/components/components/freertos/FreeRTOS-Kernel/portable/: port_common.c
nimbu/main/: CMakeLists.txt  main.cpp
nimbu/main/bt/: bt_app_av.cpp  bt_app_core.cpp  bt_main.cpp  bt_main.h
nimbu/main/common/: apis.cpp  apis.h  definitions.h  variables.h
nimbu/main/fft/: fft.cpp  fft.h  fft_engine.cpp  fft_engine.h  kiss_fft.h
nimbu/main/led/: led.cpp  led.h  led_definitions.h
nimbu/main/peripherals/: peripherals.cpp  peripherals.h  rtc_ds3231.cpp  rtc_ds3231.h
